Update for ipynb demo

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@
 /2D_FIR/HW/Max10/incremental_db
 /2D_FIR/HW/Max10/.qsys_edit
 /2D_FIR/HW/Max10/simulation
+2D_FIR/HW/Max10/dma_ex.qws
+/2D_FIR/python/__pycache__
+2D_FIR/HW/Agilex7/board.info
